# football-predictor

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  render_start.sh  render_start_backend.sh  requirements.txt  sports_cache.db  streamlit_app.py
config/: settings.py
scripts/: backfill_weather_batched.py  build_features.py  generate_predictions.py  ingest_historical.py  ingest_latest.py  init_db.py  resolve_sport_predictions.py  train_model.py  update_accuracy.py
src/football_predictor/: reference_data.py
src/football_predictor/agents/: cache.py  committee.py
src/football_predictor/api/: auth.py  main.py  schemas.py
src/football_predictor/bookmakers/: bet9ja.py  onexbet.py  sportybet.py
src/football_predictor/dashboard/: app.py
src/football_predictor/db/: init_db.py  models.py  session.py
src/football_predictor/features/: form.py  h2h.py  pipeline.py  referee_bias.py  weather_features.py  xg_features.py
src/football_predictor/ingestion/: football_data_co_uk.py  football_data_org.py  pipeline.py  understat_client.py  weather_backfill.py  weather_client.py
src/football_predictor/models/: accuracy.py  evaluation.py  market_filters.py  predict.py  resolve_sports.py  train.py
src/football_predictor/sports/: data_layer.py  features.py  sportscore_client.py  virtual_engine.py
tests/: conftest.py  test_api.py  test_calibration.py  test_features.py  test_football_data_org.py  test_llm_committee.py  test_market_filters.py  test_predict.py  test_resolve_sports.py  test_weather_backfill.py
(+4 files in other folders)
